feat(handlers): remplace la commande par un service pour redémarrer taskd

--- a/templates/taskd.service.j2
+++ b/templates/taskd.service.j2
@@ -12,7 +12,7 @@ User={{ taskd_user }}
 Group={{ taskd_group }}
 WorkingDirectory={{ taskd_data_location }}
 PrivateTmp=true
-InaccessibleDirectories=/home /root /boot /opt /mnt /media
+InaccessibleDirectories=/root /boot /opt /mnt /media
 ReadOnlyDirectories=/etc /usr
 
 [Install]
